layout issues

--- a/ben-pwebsite/src/index.css
+++ b/ben-pwebsite/src/index.css
@@ -51,7 +51,6 @@
 }
 
 #root {
-  width: 1126px;
   max-width: 100%;
   margin: 0 auto;
   padding: 0 20px;
